@@ -1,0 +1,15 @@
+; $Id$
+; This is a bad ini file
+
+YES="wrong"
+NO="wrong"
+NULL="wrong"
+FALSE="wrong"
+GOOD="right"
+ON="wrong"
+OFF="wrong"
+NONE="wrong"
+TRUE="wrong"
+ TRUE = "wrong to"
+SYNTAX1="bad
+SYNTAX2=bad"
