@@ -33,6 +33,7 @@ $ -> Language fix or change
 26-Aug-2010 Jean-Marie Simonet
  # [#22044] Menu level filter wording. Thanks Bill.
  # [#22056] incomplete language strings in admin contact. Thanks Bill.
+ # [#21888] Forbidden keys in language files not properly handled. Thanks Nikolai, Hannes, Andrew.  
 
 26-Aug-2010 Andrew Eddie
  # Fixed issue [#22064] Non-functional, unfinished, duplicated and outdated form field: mediamanager (Artyom Bisyarin).
